Improves audio input quality for WebRTC on Android

Summary:

- getUserMedia({audio: {echoCancellation: {exact: false}}}) =>
  - Adds support for "clean mode" without using any input effects on Android
  - Avoid switching to COMM mode
- Removes usage of AEC white list for Android
- Removes spam log messages
- Extends logging of audio parameters in audio streams

Bug: 866390
Tbr: dalecurtis@chromium.org
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I45beca7e37c380826cff15ff917233e8379986cb
Reviewed-on: https://chromium-review.googlesource.com/c/1304516
Commit-Queue: Henrik Andreasson <henrika@chromium.org>
Reviewed-by: Oskar Sundbom <ossu@chromium.org>
Reviewed-by: Max Morin <maxmorin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604264}
Former-commit-id: ed1c3ea32c760d88d26c7723cb942329c9c23e88